[package]
name = "antimatter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
futures = "0.3.32"
inquire = "0.9.4"
mattermost_api = { version = "0.8.2", default-features = false, features = ["rustls", "rustls-native-certs", "ws-keep-alive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
